# vemo

./: .editorconfig  .gitignore  Cargo.toml  README.md
src/: error.rs  errors.rs  main.rs
src/cfg/: config_test.rs  mod.rs  test.toml
src/commands/: bump.rs  bump_test.rs  error.rs  list.rs  mod.rs
src/commands/shell/: git.rs  git_cli.rs  git_test.rs  mod.rs
src/commands/shell/git/: commit.rs  commit_test.rs  git.rs  git_provider.rs  git_test.rs  mod.rs  repo.rs  tag.rs
src/dataprovider/: mod.rs
src/dataprovider/git/: git_data_provider.rs  mod.rs  release_data_provider.rs  release_data_provider_test.rs
src/dataprovider/git/test/: fixtures.rs  mod.rs
src/dataprovider/github/: dataprovider.rs  mod.rs  release_data_provider.rs  release_data_provider_test.rs
src/dataprovider/github/test/: mod.rs
src/dataprovider/github/test/static/: get_commit_response.json
src/git/: git_provider.rs  mod.rs
src/git/client/: error.rs  github.rs  github_test.rs  local.rs  mod.rs
src/git/client/local/: client.rs  mod.rs
src/git/model/: author.rs  change.rs  change_test.rs  commit.rs  commit_test.rs  mod.rs  repo.rs  tag.rs
src/git/provider/: error.rs  mod.rs  provider_test.rs
src/git/provider/cli/: error.rs  mod.rs  provider_test.rs
src/git/provider/github/: mod.rs
src/git/shell/: git_cli.rs  git_test.rs  mod.rs
src/lib/http/: client.rs  mod.rs
src/usecase/: git_bump.rs  git_bump_test.rs  mod.rs
src/usecase/release/: mod.rs  release_test.rs  usecase.rs
src/usecase/release/test/: fixtures.rs  mock.rs  mod.rs
