[package]
name = "vemo"
version = "0.1.0"
edition = "2021"
authors = ["Kamil Czerwiński <kamil@czerwinski.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
config = "0.13.1"
regex = "1.5.6"
semver = "1.0.10"
colored = "2.0.0"
edit = "0.1.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
mockall = "0.11.1"
serde_json = "1.0"

